overflow-fixed by html tag

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
+    
+}
+html {
+    overflow-x: hidden;
 }
 body {
     overflow-x: hidden;
@@ -152,6 +156,7 @@ header .btn:hover {
 
 
 @media (max-width:760px) {
+
     #mobile-view {
         display: block;
     }
